<resources>
    <string name="app_name">ListViewPersonalizado</string>
    <string name="action_settings">Settings</string>
    <string name="informacion">Informacion</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="lista">Listado de Carros</string>
    <string name="mensaje_guardado">Carro Guardado Exitosamente!</string>
    <string name="rojo">Rojo</string>
    <string name="blanco">Blanco</string>
    <string name="negro">Negro</string>
    <string name="color">Color</string>
    <string name="modificar">Modificar</string>
    <string name="titulo_eliminar_mensaje">Eliminar Persona</string>
    <string name="eliminar_mensaje">¿Está seguro que desea elminar a este carro?</string>
    <string name="si_eliminar_mensaje">Si</string>
    <string name="no_eliminar_mensaje" translatable="false">No</string>
    <string name="vacio">Este campo no puede estar vacío</string>
    <string name="mensaje_exito_modificar">\"Carro Modificado\"</string>
    <string name="error">Error al intentar Editar</string>

    <string-array name="color">
        <item>@string/rojo</item>
        <item>@string/blanco</item>
        <item>@string/negro</item>
    </string-array>
    <string name="no_vacio_error">Este campo no puede estar vacío</string>
</resources>
