<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="368dp"
    android:layout_height="495dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp"
    tools:context="com.example.android.listviewpersonalizado.Modificar">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaPlacaM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtPlacaM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placa" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaMarcaM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtMarcaM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marca" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaModeloM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtModeloM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modelo" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaColorM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtColorM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaPrecioM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtPrecioM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="modificar_carro"
            android:text="@string/modificar" />
    </LinearLayout>
</LinearLayout>
